--- a/Saved/Config/Windows/SourceControlSettings.ini
+++ b/Saved/Config/Windows/SourceControlSettings.ini
@@ -4,3 +4,15 @@ Provider=Git
 [GitSourceControl.GitSourceControlSettings]
 BinaryPath=C:/Users/DELL/AppData/Local/GitHubDesktop/app-3.1.1/resources/app/git/cmd/git.exe
 
+[SubversionSourceControl.SubversionSourceControlSettings]
+Repository=
+UserName=
+LabelsRoot=
+ExecutableLocation=
+
+[PerforceSourceControl.PerforceSourceControlSettings]
+Port=perforce:1666
+UserName=DELL
+Workspace=
+HostOverride=
+
