--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -42,7 +42,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=304,Y=175)
+NewWindowPosition=(X=261,Y=95)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -77,8 +77,7 @@ LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=304,Y=175)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=261,Y=95)
 
 [MRU]
 MRUItem0=/Game/NewMap
@@ -101,32 +100,39 @@ MRUItem0=/Game/NewMap
 LastLevel=/Game/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/InventorySystem/ItemSlotUI.ItemSlotUI
+OpenAssetsAtExit=/Game/Player/PLayer.PLayer
+OpenAssetsAtExit=/Game/InventorySystem/InventoryUI.InventoryUI
+OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
+OpenAssetsAtExit=/Game/InventorySystem/InventoryComponent.InventoryComponent
+OpenAssetsAtExit=/Game/InventorySystem/PickUpUI.PickUpUI
+OpenAssetsAtExit=/Game/InventorySystem/PickUpBase.PickUpBase
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/PLayer
-MRUItem1=/Game/PlayerAnimBlueprint
-MRUItem2=/Game/PLayer
-MRUItem3=/Game/Sounds/CUE/FootSteps/footstep_random
-MRUItem4=/Game/Player/new/tpc_rifle_jump_start_Anim
-MRUItem5=/Game/Player/new/tpc_rifle_jump_loop_Anim
-MRUItem6=/Game/Player/new/tpc_rifle_jump_land_Anim
-MRUItem7=/Game/Player/new/TPC_Walk_BlendSpace
-MRUItem8=/Game/Player/new/TPC_Walk_BlenderSpace
-MRUItem9=/Game/Player/new/tpc_rifle_walk_strafe_right_Anim
-MRUItem10=/Game/Player/new/tpc_rifle_walk_strafe_left_Anim
-MRUItem11=/Game/Player/new/tpc_rifle_walk_forward_Anim
-MRUItem12=/Game/Player/new/tpc_rifle_walk_45_forward_right_Anim
-MRUItem13=/Game/Player/new/tpc_rifle_walk_45_forward_left_Anim
-MRUItem14=/Game/Player/new/tpc_rifle_walk_45_back_right_Anim
-MRUItem15=/Game/Player/new/tpc_rifle_walk_45_back_left_Anim
-MRUItem16=/Game/Player/PlayerAnimBlueprint
-MRUItem17=/Game/Player/new/NewBlendSpace
-MRUItem18=/Game/Player/new/PA_third_person_character
-MRUItem19=/Game/Player/new/tpc_rifle_run_strafe_left_Anim
+MRUItem0=/Game/InventorySystem/PickUpBase
+MRUItem1=/Game/InventorySystem/PickUpUI
+MRUItem2=/Game/InventorySystem/ItemSlotUI
+MRUItem3=/Game/InventorySystem/InventoryComponent
+MRUItem4=/Game/PlayerUI
+MRUItem5=/Game/InventorySystem/InventoryUI
+MRUItem6=/Game/Player/new/Anim_TPC_Base
+MRUItem7=/Game/AK47/AM_TPC_Rifle_Reload_Out_Of_Ammo
+MRUItem8=/Game/AK47/S_assault_rifle_02_reload_out_of_ammo
+MRUItem9=/Game/AK47/tpc_rifle_reload_out_of_ammo_Anim
+MRUItem10=/Game/Player/new/AimOffset
+MRUItem11=/Game/Player/new/AimOffset/tpc_rifle_aim_center_down_Anim
+MRUItem12=/Game/Player/new/AimOffset/tpc_rifle_aim_right_up_Anim
+MRUItem13=/Game/Player/new/AimOffset/tpc_rifle_aim_right_down_Anim
+MRUItem14=/Game/Player/new/AimOffset/tpc_rifle_aim_right_center_Anim
+MRUItem15=/Game/Player/new/AimOffset/tpc_rifle_aim_left_up_Anim
+MRUItem16=/Game/Player/new/AimOffset/tpc_rifle_aim_left_down_Anim
+MRUItem17=/Game/Player/new/AimOffset/tpc_rifle_aim_left_center_Anim
+MRUItem18=/Game/Player/new/AimOffset/tpc_rifle_aim_center_up_Anim
+MRUItem19=/Game/Player/new/AimOffset/tpc_rifle_aim_center_Anim
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1102,6 +1108,52 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+AimOffsetBlendSpace.InputInterpolation=True
+AimOffsetBlendSpace.Axis Settings=True
+AimOffsetBlendSpace.AdditiveSettings=True
+AimOffsetBlendSpace.Animation=True
+AimOffsetBlendSpace.SampleInterpolation=True
+AimOffsetBlendSpace.AnimationNotifies=True
+AimOffsetBlendSpace.MetaData=True
+AimOffsetBlendSpace.Thumbnail=True
+AimOffsetBlendSpace.BlendSamples=True
+BlendSample.BlendSample=True
+AnimGraphNode_RotationOffsetBlendSpace.Performance=True
+AnimGraphNode_RotationOffsetBlendSpace.Alpha=True
+AnimGraphNode_RotationOffsetBlendSpace.Coordinates=True
+AnimGraphNode_RotationOffsetBlendSpace.Settings=True
+AnimGraphNode_RotationOffsetBlendSpace.Relevancy=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+EditorAnimSegment.Animation Segment=True
+EditorAnimSegment.Montage=True
+SkeletalMeshComponent.Optimization=False
+SkeletalMeshComponent.SkeletalMesh=False
+SkeletalMeshComponent.Mobile=False
+SkeletalMeshComponent.AssetUserData=False
+SoundWave.Format=True
+SoundWave.Playback=True
+SoundWave.Sound=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Analysis=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+PersonaPreviewSceneDescription.Mesh=True
+PickUpBase_C.Tick=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=1
@@ -1148,6 +1200,11 @@ WmfMediaSettings.Debug=True
 /Game/Player/new/tpc_rifle_jump_start_Anim.tpc_rifle_jump_start_Anim=0
 /Game/PlayerAnimBlueprint.PlayerAnimBlueprint=0
 /Game/Player/PLayer.PLayer=1
+/Game/Player/new/AimOffset/tpc_rifle_aim_right_up_Anim.tpc_rifle_aim_right_up_Anim=0
+/Game/Player/new/AimOffset/tpc_rifle_aim_center_down_Anim.tpc_rifle_aim_center_down_Anim=0
+/Game/AK47/AM_TPC_Rifle_Reload_Out_Of_Ammo.AM_TPC_Rifle_Reload_Out_Of_Ammo=0
+/Game/Player/new/Anim_TPC_Base.Anim_TPC_Base=0
+/Game/AK47/S_assault_rifle_02_reload_out_of_ammo.S_assault_rifle_02_reload_out_of_ammo=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1252,22 +1309,22 @@ PropertyWrapper.Variable=True
 Border="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 Object=
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
-PlayerUI_C="\"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Render Transform.RenderTransform\" "
-InventoryUI_C="\"Object.Render Transform.RenderTransform\" "
+PlayerUI_C=
+UserWidget=
+InventoryUI_C="\"Object.当前位置\" "
 TextBlock="\"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
 WrapBox="\"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
 InvalidationBox="\"Object.Render Transform.RenderTransform\" "
 DragIcon_C="\"Object.Render Transform.RenderTransform\" "
-ItemSlotUI_C="\"Object.Render Transform.RenderTransform\" "
-PickUpUI_C="\"Object.Render Transform.RenderTransform\" "
+ItemSlotUI_C=
+PickUpUI_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1280,20 +1337,31 @@ BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent=
-SkinnedMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
-AnimGraphNode_BlendListBase=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
+AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_Base=
 K2Node=
 CapsuleComponent=
 ShapeComponent=
+AnimSequence=
+AnimSequenceBase=
+AnimationAsset=
+PLayer_C="\"Object.Mesh\" "
+Character="\"Object.Mesh\" "
+Pawn="\"Object.Mesh\" "
+Anim_TPC_Base_C="\"Object.AimPitch\" "
+AnimInstance="\"Object.AimPitch\" "
+DragDrop_C="\"Object.被拖动的控件\" "
+DragDropOperation="\"Object.Payload\" "
+InventoryComponent_C=
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2350,6 +2418,18 @@ TimelineEnabledSnaps=MontageSection
 [DetailCustomWidgetExpansion]
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
+AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
+PLayer_C=
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,
+Anim_TPC_Base_C=
+DragDrop_C=
+InventoryUI_C=
+ItemSlotUI_C=
+PickUpUI_C=
+InventoryComponent_C=K2Node_VariableGet.DefaultValueCategory.None,
+DragDropOperation=
+PlayerUI_C=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Enemy/realAI/AI3.AI3;
@@ -2388,4 +2468,7 @@ ProjectPackagingSettings=True
 GeneralProjectSettings=True
 AssetToolsSettings=True
 AssetManagerSettings=True
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
