--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,6 +78,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=261,Y=95)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [MRU]
 MRUItem0=/Game/NewMap
@@ -91,7 +92,7 @@ MRUItem0=/Game/NewMap
 特殊效果=False
 通用=False
 图元=False
-用户创建=False
+用户创建=True
 优化=False
 杂项=False
 高级=False
@@ -101,13 +102,6 @@ LastLevel=/Game/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/InventorySystem/ItemSlotUI.ItemSlotUI
-OpenAssetsAtExit=/Game/Player/PLayer.PLayer
-OpenAssetsAtExit=/Game/InventorySystem/InventoryUI.InventoryUI
-OpenAssetsAtExit=/Game/PlayerUI.PlayerUI
-OpenAssetsAtExit=/Game/InventorySystem/InventoryComponent.InventoryComponent
-OpenAssetsAtExit=/Game/InventorySystem/PickUpUI.PickUpUI
-OpenAssetsAtExit=/Game/InventorySystem/PickUpBase.PickUpBase
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -115,24 +109,24 @@ InstalledPlugins=XRVisualization
 [ContentBrowserRecent]
 MRUItem0=/Game/InventorySystem/PickUpBase
 MRUItem1=/Game/InventorySystem/PickUpUI
-MRUItem2=/Game/InventorySystem/ItemSlotUI
-MRUItem3=/Game/InventorySystem/InventoryComponent
-MRUItem4=/Game/PlayerUI
-MRUItem5=/Game/InventorySystem/InventoryUI
-MRUItem6=/Game/Player/new/Anim_TPC_Base
-MRUItem7=/Game/AK47/AM_TPC_Rifle_Reload_Out_Of_Ammo
-MRUItem8=/Game/AK47/S_assault_rifle_02_reload_out_of_ammo
-MRUItem9=/Game/AK47/tpc_rifle_reload_out_of_ammo_Anim
-MRUItem10=/Game/Player/new/AimOffset
-MRUItem11=/Game/Player/new/AimOffset/tpc_rifle_aim_center_down_Anim
-MRUItem12=/Game/Player/new/AimOffset/tpc_rifle_aim_right_up_Anim
-MRUItem13=/Game/Player/new/AimOffset/tpc_rifle_aim_right_down_Anim
-MRUItem14=/Game/Player/new/AimOffset/tpc_rifle_aim_right_center_Anim
-MRUItem15=/Game/Player/new/AimOffset/tpc_rifle_aim_left_up_Anim
-MRUItem16=/Game/Player/new/AimOffset/tpc_rifle_aim_left_down_Anim
-MRUItem17=/Game/Player/new/AimOffset/tpc_rifle_aim_left_center_Anim
-MRUItem18=/Game/Player/new/AimOffset/tpc_rifle_aim_center_up_Anim
-MRUItem19=/Game/Player/new/AimOffset/tpc_rifle_aim_center_Anim
+MRUItem2=/Game/InventorySystem/InventoryComponent
+MRUItem3=/Game/PlayerUI
+MRUItem4=/Game/InventorySystem/InventoryUI
+MRUItem5=/Game/Player/PLayer
+MRUItem6=/Game/InventorySystem/ItemSlotUI
+MRUItem7=/Game/Player/new/Anim_TPC_Base
+MRUItem8=/Game/AK47/AM_TPC_Rifle_Reload_Out_Of_Ammo
+MRUItem9=/Game/AK47/S_assault_rifle_02_reload_out_of_ammo
+MRUItem10=/Game/AK47/tpc_rifle_reload_out_of_ammo_Anim
+MRUItem11=/Game/Player/new/AimOffset
+MRUItem12=/Game/Player/new/AimOffset/tpc_rifle_aim_center_down_Anim
+MRUItem13=/Game/Player/new/AimOffset/tpc_rifle_aim_right_up_Anim
+MRUItem14=/Game/Player/new/AimOffset/tpc_rifle_aim_right_down_Anim
+MRUItem15=/Game/Player/new/AimOffset/tpc_rifle_aim_right_center_Anim
+MRUItem16=/Game/Player/new/AimOffset/tpc_rifle_aim_left_up_Anim
+MRUItem17=/Game/Player/new/AimOffset/tpc_rifle_aim_left_down_Anim
+MRUItem18=/Game/Player/new/AimOffset/tpc_rifle_aim_left_center_Anim
+MRUItem19=/Game/Player/new/AimOffset/tpc_rifle_aim_center_up_Anim
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1154,6 +1148,7 @@ MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
 MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 K2Node_VariableSet.Events=True
+InventoryUI_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=1
@@ -1205,6 +1200,7 @@ K2Node_VariableSet.Events=True
 /Game/AK47/AM_TPC_Rifle_Reload_Out_Of_Ammo.AM_TPC_Rifle_Reload_Out_Of_Ammo=0
 /Game/Player/new/Anim_TPC_Base.Anim_TPC_Base=0
 /Game/AK47/S_assault_rifle_02_reload_out_of_ammo.S_assault_rifle_02_reload_out_of_ammo=0
+/Game/InventorySystem/PickUpBase.PickUpBase=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1316,14 +1312,14 @@ Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
 UserWidget=
-InventoryUI_C="\"Object.当前位置\" "
+InventoryUI_C=
 TextBlock="\"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
 WrapBox="\"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
 InvalidationBox="\"Object.Render Transform.RenderTransform\" "
 DragIcon_C="\"Object.Render Transform.RenderTransform\" "
-ItemSlotUI_C=
+ItemSlotUI_C="\"Object.Render Transform.RenderTransform\" "
 PickUpUI_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1341,7 +1337,7 @@ SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Respon
 SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+SceneComponent=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_Base=
@@ -1351,9 +1347,9 @@ ShapeComponent=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
-PLayer_C="\"Object.Mesh\" "
-Character="\"Object.Mesh\" "
-Pawn="\"Object.Mesh\" "
+PLayer_C=
+Character=
+Pawn=
 Anim_TPC_Base_C="\"Object.AimPitch\" "
 AnimInstance="\"Object.AimPitch\" "
 DragDrop_C="\"Object.被拖动的控件\" "
@@ -1361,7 +1357,7 @@ DragDropOperation="\"Object.Payload\" "
 InventoryComponent_C=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2427,9 +2423,10 @@ DragDrop_C=
 InventoryUI_C=
 ItemSlotUI_C=
 PickUpUI_C=
-InventoryComponent_C=K2Node_VariableGet.DefaultValueCategory.None,
+InventoryComponent_C=
 DragDropOperation=
 PlayerUI_C=
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Enemy/realAI/AI3.AI3;
