--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,31 +102,34 @@ LastLevel=/Game/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Player/new/NewMaterial.NewMaterial
+OpenAssetsAtExit=/Game/Enemy/AI_Hit.AI_Hit
+OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InventorySystem/PickUpBase
-MRUItem1=/Game/InventorySystem/PickUpUI
-MRUItem2=/Game/InventorySystem/InventoryComponent
-MRUItem3=/Game/PlayerUI
-MRUItem4=/Game/InventorySystem/InventoryUI
-MRUItem5=/Game/Player/PLayer
-MRUItem6=/Game/InventorySystem/ItemSlotUI
+MRUItem0=/Game/Enemy/AI_Hit
+MRUItem1=/Game/Player/new/PLayer
+MRUItem2=/Game/Player/new/NewMaterial_Inst
+MRUItem3=/Game/Player/new/NewMaterial
+MRUItem4=/Game/Player/new/PlayerTexture/MI_TPC_Camo_001_002
+MRUItem5=/Game/Player/new/PlayerTexture/MI_TPC_Camo_001_001
+MRUItem6=/Game/Player/PLayer
 MRUItem7=/Game/Player/new/Anim_TPC_Base
-MRUItem8=/Game/AK47/AM_TPC_Rifle_Reload_Out_Of_Ammo
-MRUItem9=/Game/AK47/S_assault_rifle_02_reload_out_of_ammo
-MRUItem10=/Game/AK47/tpc_rifle_reload_out_of_ammo_Anim
-MRUItem11=/Game/Player/new/AimOffset
-MRUItem12=/Game/Player/new/AimOffset/tpc_rifle_aim_center_down_Anim
-MRUItem13=/Game/Player/new/AimOffset/tpc_rifle_aim_right_up_Anim
-MRUItem14=/Game/Player/new/AimOffset/tpc_rifle_aim_right_down_Anim
-MRUItem15=/Game/Player/new/AimOffset/tpc_rifle_aim_right_center_Anim
-MRUItem16=/Game/Player/new/AimOffset/tpc_rifle_aim_left_up_Anim
-MRUItem17=/Game/Player/new/AimOffset/tpc_rifle_aim_left_down_Anim
-MRUItem18=/Game/Player/new/AimOffset/tpc_rifle_aim_left_center_Anim
-MRUItem19=/Game/Player/new/AimOffset/tpc_rifle_aim_center_up_Anim
+MRUItem8=/Game/InventorySystem/PickUpBase
+MRUItem9=/Game/InventorySystem/PickUpUI
+MRUItem10=/Game/InventorySystem/InventoryComponent
+MRUItem11=/Game/PlayerUI
+MRUItem12=/Game/InventorySystem/InventoryUI
+MRUItem13=/Game/InventorySystem/ItemSlotUI
+MRUItem14=/Game/AK47/AM_TPC_Rifle_Reload_Out_Of_Ammo
+MRUItem15=/Game/AK47/S_assault_rifle_02_reload_out_of_ammo
+MRUItem16=/Game/AK47/tpc_rifle_reload_out_of_ammo_Anim
+MRUItem17=/Game/Player/new/AimOffset
+MRUItem18=/Game/Player/new/AimOffset/tpc_rifle_aim_center_down_Anim
+MRUItem19=/Game/Player/new/AimOffset/tpc_rifle_aim_right_up_Anim
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1149,6 +1152,41 @@ MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 K2Node_VariableSet.Events=True
 InventoryUI_C.Events=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+MaterialEditorInstanceConstant.ParameterGroups=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=1
@@ -1307,7 +1345,7 @@ ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
@@ -1327,7 +1365,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
@@ -1337,7 +1375,7 @@ SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Respon
 SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-SceneComponent=
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_Base=
@@ -1347,17 +1385,17 @@ ShapeComponent=
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
-PLayer_C=
-Character=
-Pawn=
-Anim_TPC_Base_C="\"Object.AimPitch\" "
-AnimInstance="\"Object.AimPitch\" "
+PLayer_C="\"Object.is reloading\" "
+Character="\"Object.is reloading\" "
+Pawn="\"Object.is reloading\" "
+Anim_TPC_Base_C=
+AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
 DragDropOperation="\"Object.Payload\" "
 InventoryComponent_C=
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1411,7 +1449,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 [RootWindow]
 ScreenPosition=X=633.000 Y=256.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2380,6 +2418,12 @@ SourceControlWindows.TimeStamp=2022.10.15-08.38.50
 SourceControlWindows.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2022.10.15-08.38.44
 ExternalImagePicker.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2022.10.15-08.38.47
+NullDrv.LastCompileMethod=Unknown
+BlueprintNativeCodeGen.TimeStamp=2022.10.15-08.38.40
+BlueprintNativeCodeGen.LastCompileMethod=Unknown
+BlueprintCompilerCppBackend.TimeStamp=2022.10.15-08.38.40
+BlueprintCompilerCppBackend.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2427,6 +2471,7 @@ InventoryComponent_C=
 DragDropOperation=
 PlayerUI_C=
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Enemy/realAI/AI3.AI3;
@@ -2468,4 +2513,64 @@ AssetManagerSettings=True
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
