--- a/Saved/Config/Windows/Game.ini
+++ b/Saved/Config/Windows/Game.ini
@@ -1,1 +1,23 @@
+[/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="C:/Users/DELL/Desktop")
+Build=IfProjectHasCode
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+bUseIoStore=False
+bMakeBinaryConfig=False
+bGenerateNoChunks=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludeAppLocalPrerequisites=False
+bDeterministicShaderCodeOrder=False
+ApplocalPrerequisitesDirectory=(Path="")
+LocalizationTargetCatchAllChunkId=0
+bCookAll=False
+bCookMapsOnly=False
 
